[DT-2461] Add DAC Setting for Automatic Opened DARs (#2753)